src/structured-agent-zed/tree-sitter-structured-agent/test/corpus/advanced.txt
==========================================
Select expressions
==========================================

fn calculator(ctx: Context, request: String): i32 {
    let result = select {
        add(_, _) as sum => sum,
        subtract(_, _) as diff => diff
    }
    return result
}

---

(source_file
  (definition
    (function_declaration
      name: (identifier)
      parameters: (parameter_list
        (parameter
          name: (identifier)
          type: (type))
        (parameter
          name: (identifier)
          type: (type)))
      return_type: (type)
      body: (block
        (statement
          (let_declaration
            name: (identifier)
            value: (expression
              (select_expression
                (select_clause
                  call: (function_call
                    function: (identifier)
                    arguments: (argument_list
                      (expression
                        (placeholder))
                      (expression
                        (placeholder))))
                  binding: (identifier)
                  result: (expression
                    (identifier)))
                (select_clause
                  call: (function_call
                    function: (identifier)
                    arguments: (argument_list
                      (expression
                        (placeholder))
                      (expression
                        (placeholder))))
                  binding: (identifier)
                  result: (expression
                    (identifier)))))))
        (statement
          (return_statement
            (expression
              (identifier))))))))

==========================================
Control flow statements
==========================================

fn control_example(condition: Boolean): () {
    if condition {
        let flag = true
        while flag {
            "Processing"!
            flag = false
        }
        "Done"!
    }
    return condition
}

---

(source_file
  (definition
    (function_declaration
      name: (identifier)
      parameters: (parameter_list
        (parameter
          name: (identifier)
          type: (type)))
      return_type: (type
        (unit_type))
      body: (block
        (statement
          (if_statement
            condition: (expression
              (identifier))
            consequence: (block
              (statement
                (let_declaration
                  name: (identifier)
                  value: (expression
                    (boolean_literal))))
              (statement
                (while_statement
                  condition: (expression
                    (identifier))
                  body: (block
                    (statement
                      (injection
                        (string_literal)))
                    (statement
                      (variable_assignment
                        name: (identifier)
                        value: (expression
                          (boolean_literal)))))))
              (statement
                (injection
                  (string_literal))))))
        (statement
          (return_statement
            (expression
              (identifier))))))))

==========================================
String literals and injections
==========================================

fn string_test(name: String): String {
    let greeting = "Hello"
    greeting!
    name!
    return greeting
}

---

(source_file
  (definition
    (function_declaration
      name: (identifier)
      parameters: (parameter_list
        (parameter
          name: (identifier)
          type: (type)))
      return_type: (type)
      body: (block
        (statement
          (let_declaration
            name: (identifier)
            value: (expression
              (string_literal))))
        (statement
          (injection
            (identifier)))
        (statement
          (injection
            (identifier)))
        (statement
          (return_statement
            (expression
              (identifier))))))))

==========================================
External functions
==========================================

extern fn add(a: i32, b: i32): i32
extern fn process(data: String): String

fn use_external(input: String): String {
    return process(input)
}

---

(source_file
  (definition
    (external_function_declaration
      name: (identifier)
      parameters: (parameter_list
        (parameter
          name: (identifier)
          type: (type))
        (parameter
          name: (identifier)
          type: (type)))
      return_type: (type)))
  (definition
    (external_function_declaration
      name: (identifier)
      parameters: (parameter_list
        (parameter
          name: (identifier)
          type: (type)))
      return_type: (type)))
  (definition
    (function_declaration
      name: (identifier)
      parameters: (parameter_list
        (parameter
          name: (identifier)
          type: (type)))
      return_type: (type)
      body: (block
        (statement
          (return_statement
            (expression
              (function_call
                function: (identifier)
                arguments: (argument_list
                  (expression
                    (identifier)))))))))))

==========================================
Boolean and placeholder expressions
==========================================

fn boolean_test(): Boolean {
    let flag1 = true
    let flag2 = false
    let unknown = _
    return flag1
}

---

(source_file
  (definition
    (function_declaration
      name: (identifier)
      parameters: (parameter_list)
      return_type: (type)
      body: (block
        (statement
          (let_declaration
            name: (identifier)
            value: (expression
              (boolean_literal))))
        (statement
          (let_declaration
            name: (identifier)
            value: (expression
              (boolean_literal))))
        (statement
          (let_declaration
            name: (identifier)
            value: (expression
              (placeholder))))
        (statement
          (return_statement
            (expression
              (identifier))))))))

==========================================
Function calls and expression statements
==========================================

fn expression_examples(value: String): String {
    process_data(value)
    calculate_result(value, "param")
    return value
}

---

(source_file
  (definition
    (function_declaration
      name: (identifier)
      parameters: (parameter_list
        (parameter
          name: (identifier)
          type: (type)))
      return_type: (type)
      body: (block
        (statement
          (expression_statement
            (expression
              (function_call
                function: (identifier)
                arguments: (argument_list
                  (expression
                    (identifier)))))))
        (statement
          (expression_statement
            (expression
              (function_call
                function: (identifier)
                arguments: (argument_list
                  (expression
                    (identifier))
                  (expression
                    (string_literal)))))))
        (statement
          (return_statement
            (expression
              (identifier))))))))
