src/structured-agent-zed/tree-sitter-structured-agent/test/corpus/basic.txt
==========================================
External functions
==========================================

extern fn add(x: i32, y: i32): i32
extern fn subtract(x: i32, y: i32): i32

---

(source_file
  (definition
    (external_function_declaration
      name: (identifier)
      parameters: (parameter_list
        (parameter
          name: (identifier)
          type: (type))
        (parameter
          name: (identifier)
          type: (type)))
      return_type: (type)))
  (definition
    (external_function_declaration
      name: (identifier)
      parameters: (parameter_list
        (parameter
          name: (identifier)
          type: (type))
        (parameter
          name: (identifier)
          type: (type)))
      return_type: (type))))

==========================================
Simple function
==========================================

fn greet(ctx: Context, name: String): String {
    "Hello "!
    name!
}

---

(source_file
  (definition
    (function_declaration
      name: (identifier)
      parameters: (parameter_list
        (parameter
          name: (identifier)
          type: (type))
        (parameter
          name: (identifier)
          type: (type)))
      return_type: (type)
      body: (block
        (statement
          (injection
            (string_literal)))
        (statement
          (injection
            (identifier)))))))

==========================================
Function with comments
==========================================

# This is a greeting function
# It takes a context and name
fn greet(ctx: Context, name: String): String {
    "Hello "!
    name!
}

---

(source_file
  (definition
    (function_declaration
      (comment)
      (comment)
      name: (identifier)
      parameters: (parameter_list
        (parameter
          name: (identifier)
          type: (type))
        (parameter
          name: (identifier)
          type: (type)))
      return_type: (type)
      body: (block
        (statement
          (injection
            (string_literal)))
        (statement
          (injection
            (identifier)))))))

==========================================
Keywords in identifiers should not be highlighted
==========================================

fn transfer_info(asynchronous_flag: Boolean): () {
    let classified = true
    transfer_info!
}

---

(source_file
  (definition
    (function_declaration
      name: (identifier)
      parameters: (parameter_list
        (parameter
          name: (identifier)
          type: (type)))
      return_type: (type
        (unit_type))
      body: (block
        (statement
          (let_declaration
            name: (identifier)
            value: (expression
              (boolean_literal))))
        (statement
          (injection
            (identifier)))))))
